--- a/src/common/wysiwyg/lexical/theme/KiwimeriEditorTheme.css
+++ b/src/common/wysiwyg/lexical/theme/KiwimeriEditorTheme.css
@@ -382,6 +382,9 @@ pre::-webkit-scrollbar-thumb {
   font-size: 16px;
   color: rgba(var(--ion-text-color-rgb, 0, 0, 0), 0.54);
 }
+.android .toolbar ion-icon {
+  font-size: 24px;
+}
 .toolbar .toolbar-item:hover:not([disabled]) ion-icon {
   color: rgba(var(--color, 0, 0, 0), 0.54);
 }
