--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -5,3 +5,19 @@ ion-input.invisible,
 ion-textarea.invisible {
   --highlight-color-focused: rgba(var(--highlight-color-focused), 0);
 }
+
+ion-breadcrumb::part(native),
+ion-breadcrumb::part(collapsed-indicator) {
+  padding: 0;
+}
+ion-breadcrumb::part(collapsed-indicator) {
+  margin: 0;
+  margin-left: 4px;
+  width: 22px;
+}
+ion-breadcrumb ion-button {
+  margin: 0;
+}
+ion-breadcrumb ion-button::part(native) {
+  padding: 0;
+}
