--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -15,9 +15,11 @@ ion-breadcrumb::part(collapsed-indicator) {
   margin-left: 4px;
   width: 22px;
 }
-ion-breadcrumb ion-button {
-  margin: 0;
-}
-ion-breadcrumb ion-button::part(native) {
-  padding: 0;
+ion-breadcrumb {
+  ion-button {
+    margin: 0;
+  }
+  ion-button::part(native) {
+    padding: 0;
+  }
 }
