--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,6 +24,11 @@ ion-list.inner-list {
   }
 }
 
+ion-item.inner-item {
+  --padding-start: 4px;
+  --padding-end: 4px;
+}
+
 ion-header.subheader {
   /* fix breadcrumb in light mode on android */
   background: var(--ion-color-primary-contrast, #fff);
@@ -54,4 +59,8 @@ ion-breadcrumb {
   ion-button::part(native) {
     padding: 0;
   }
+}
+
+ion-modal.auto-height {
+  --height: auto;
 }
