--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,6 +1,10 @@
 /* For information on how to create your own theme, please see:
 http://ionicframework.com/docs/theming/ */
 
+ion-toolbar.slim {
+  --min-height: 36px;
+}
+
 ion-input.invisible,
 ion-textarea.invisible {
   --highlight-color-focused: rgba(var(--highlight-color-focused), 0);
@@ -36,21 +40,6 @@ ion-item.inner-item-slim {
 }
 ion-icon.slim[slot='start'] {
   margin-inline-end: 18px;
-}
-
-ion-header.subheader {
-  /* fix breadcrumb in light mode on android */
-  background: var(--ion-color-primary-contrast, #fff);
-  -webkit-box-shadow:
-    0 2px 4px -2px rgba(0, 0, 0, 0.8) inset,
-    0 2px 4px -1px rgba(0, 0, 0, 0.2),
-    0 4px 5px 0 rgba(0, 0, 0, 0.14),
-    0 1px 10px 0 rgba(0, 0, 0, 0.12);
-  box-shadow:
-    0 2px 4px -2px rgba(0, 0, 0, 0.6) inset,
-    0 2px 4px -1px rgba(0, 0, 0, 0.2),
-    0 4px 5px 0 rgba(0, 0, 0, 0.14),
-    0 1px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 ion-breadcrumb::part(native),
