fix filter position

--- a/src/common/wysiwyg/pages/KiwimeriPagesBrowserPlugin.scss
+++ b/src/common/wysiwyg/pages/KiwimeriPagesBrowserPlugin.scss
@@ -2,7 +2,7 @@
   position: fixed;
   z-index: 999999;
   right: 10px;
-  top: 100px;
+  top: 10%;
   width: 15%;
   min-width: 90px;
   overflow: auto;
