--- a/src/common/wysiwyg/lexical/theme/KiwimeriEditorTheme.scss
+++ b/src/common/wysiwyg/lexical/theme/KiwimeriEditorTheme.scss
@@ -124,6 +124,68 @@
   margin: 8px 16px;
 }
 
+.editor-listitem-checked,
+.editor-listitem-unchecked {
+  position: relative;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  list-style-type: none;
+  outline: none;
+  display: block;
+}
+.editor-listitem-checked > *,
+.editor-listitem-unchecked > * {
+  margin-left: 0.01em;
+}
+.editor-listitem-unchecked:before,
+.editor-listitem-checked:before {
+  content: '\200B';
+  width: 0.9em;
+  height: 0.9em;
+  top: 50%;
+  left: 0;
+  cursor: pointer;
+  display: block;
+  background-size: cover;
+  position: absolute;
+  transform: translateY(-50%);
+}
+.editor-listitem-checked {
+  text-decoration: line-through;
+  color: var(--ion-color-medium);
+}
+.editor-listitem-unchecked:focus:before,
+.editor-listitem-checked:focus:before {
+  box-shadow: 0 0 0 2px #a6cdfe;
+  border-radius: 2px;
+}
+.editor-listitem-unchecked:before {
+  border: 1px solid #999;
+  border-radius: 2px;
+}
+.editor-listitem-checked:before {
+  border: 1px solid var(--ion-color-medium);
+  border-radius: 2px;
+  background-color: var(--ion-color-medium);
+  background-repeat: no-repeat;
+}
+.editor-listitem-checked:after {
+  content: '';
+  cursor: pointer;
+  border-color: #fff;
+  border-style: solid;
+  position: absolute;
+  display: block;
+  top: 45%;
+  width: 0.2em;
+  left: 0.35em;
+  height: 0.4em;
+  transform: translateY(-50%) rotate(45deg);
+  border-width: 0 0.1em 0.1em 0;
+}
+
 .editor-nested-listitem {
   list-style-type: none;
 }
